--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/svg" href="images/game-svgrepo-com.svg">
   <title>R-P-S</title>
   <link rel="stylesheet" href="style.css">
   </head>
@@ -50,7 +51,7 @@
   
   </div>
 
-  <img src="images/Screenshot 2025-06-16 114505.png" alt="">
+  <img src="images/Screenshot 2025-06-16 115230.png" alt="">
   
 <script src="conf.js"></script>
   
