Add auto play feature to game
Introduced an auto play function in conf.js that allows the game to play automatically at intervals. Updated index.html to include an 'Auto play' button and added corresponding styles in style.css for the new button and its container.

--- a/index.html
+++ b/index.html
@@ -48,9 +48,16 @@
     localStorage.removeItem('score');
     updateScoreElement();
   " class="reset-button-score"><img src="images/basic-outline-reset-clock-svgrepo-com.svg" class="repeat-button"></button>
+ 
 </div>
+<div class="auto-play-box">
+<button onclick="
+  autoPlay();
+  " class="auto-play-button">Auto play</button>
   
   </div>
+</div>
+ 
   
 <script src="conf.js"></script>
   
