--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     </div>
     
   <div class="icon-button">
-     <button onclick="playGame('rock')" class="move-button"
+     <button class="move-button js-rock-button"
   ><img src="images/rock-emoji.svg" class="move-icon"></button>
-  <button onclick="playGame('paper')" class="move-button"
+  <button class="move-button js-paper-button"
   ><img src="images/paper-emoji.svg" class="move-icon" ></button>
-  <button onclick="playGame('scissors')" class="move-button"><img src="images/scissors-emoji.svg" class="move-icon" ></button>
+  <button class="move-button js-scissors-button"><img src="images/scissors-emoji.svg" class="move-icon" ></button>
   </div>
 
   <div class="result-box">
