--- a/index.html
+++ b/index.html
@@ -41,13 +41,7 @@
   <div class="score-box"><p class="js-score score"></p>
 </div>
 <div class="reset-score-box">
-<button onclick="
-    score.wins = 0;
-    score.losses = 0;
-    score.ties = 0;
-    localStorage.removeItem('score');
-    updateScoreElement();
-  " class="reset-button-score"><img src="images/basic-outline-reset-clock-svgrepo-com.svg" class="repeat-button"></button>
+<button class="reset-button-score js-reset-button"><img src="images/basic-outline-reset-clock-svgrepo-com.svg" class="repeat-button"></button>
  
 </div>
 <div class="auto-play-box">
