Refactor auto play button and enhance UI styles
Moved the auto play button event handler from inline HTML to JavaScript for better separation of concerns. Improved overall UI with a layout consistency.

--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
  
 </div>
 <div class="auto-play-box">
-<button onclick="
-  autoPlay();
-  " class="auto-play-button">Auto play</button>
+<button class="auto-play-button js-auto-button">Auto play</button>
   
   </div>
 </div>
